--- a/data/bluefish.desktop.in
+++ b/data/bluefish.desktop.in
@@ -1,11 +1,13 @@
 [Desktop Entry]
 Name=Bluefish Editor
+Name[de]=Bluefish Editor
 Comment=Web Development Editor
-Exec=bluefish -n
+Comment[de]=Editor für Web-Entwickler
+Exec=bluefish %F
 Icon=ICONDIR/bluefish-icon.png
 Terminal=false
 Type=Application
 Categories=Application;Development;
 Encoding=UTF-8
 StartupNotify=true
-MimeType=text/html;text/css;text/x-javascript;text/x-python;text/x-perl;application/x-php;text/x-java;application/bluefish-project;text/javascript;text/x-php;application/x-cgi;application/x-javascript;application/x-perl;application/x-python;application/xhtml+xml;text/mathml;text/x-csrc;text/x-chdr;text/x-dtd;text/x-sql;text/xml;
+MimeType=text/html;text/css;text/x-javascript;text/x-python;text/x-perl;application/x-php;text/x-java;text/javascript;text/x-php;application/x-cgi;application/x-javascript;application/x-perl;application/x-python;application/xhtml+xml;text/mathml;text/x-csrc;text/x-chdr;text/x-dtd;text/x-sql;text/xml;
