--- a/data/custom_menu.fr.in
+++ b/data/custom_menu.fr.in
@@ -38,7 +38,7 @@ cmenu_insert: /PHP+HTML/Zone de saisie:<input type="text" name="%0" value="<?php
 cmenu_insert: /PHP+HTML/Boîte de sélection/À partir d'un jeu de résultats MySQL:<select name="%0">\n<?php\nwhile($row = mysql_fetch_row($%1)) {\n\tif (isset($%0) && ($%0 == $row[%2])) {\n\t\\techo '<option value="'.$row[%2].'" selected>'.$row[%3].'</option>';\n\t} else {\n\t\\techo '<option value="'.$row[%2].'">'.$row[%3].'</option>';\n\t}\n}\n?></select>::4:Nom de la sélection:Gestionnaire du résultat de recherche:Index de la valeur:Index de l'étiquette:
 cmenu_insert: /PHP+HTML/Boîte de sélection/À partir d'un jeu de résultats InterBase:<select name="%0">\n<?php\nwhile($row = ibase_fetch_row($%1)) {\n\tif (isset($%0) && ($%0 == $row[%2])) {\n\t\\techo '<option value="'.$row[%2].'" selected>'.$row[%3].'</option>';\n\t} else {\n\t\techo '<option value="'.$row[%2].'">'.$row[%3].'</option>';\n\t}\n}\n?></select>::4:Nom de la sélection:Gestionnaire du résultat de recherche:Index de la valeur:Index de l'étiquette:
 cmenu_insert: /PHP+HTML/Boîte de sélection/À partir d'un tableau:<select name="%0">\n<?php\nwhile(list($key, $val)=each($%1)) {\n\tif (isset($%0) && ($%0 == $val)) {\n\t\techo '<option value="'.$key.'" selected>'.$val.'</option>';\n\t} else {\n\t\techo '<option value="'.$key.'">'.$val.'</option>';\n\t}\n}\n?></select>::2:Nom de la sélection:Nom du tableau avec options:
-cmenu_insert: /PHP+HTML/Général/Calendrier:<?php\n\t$now = getdate(time());\n\t$time = mktime(0,0,0, $now['mon'], 1, $now['year']);\n\t$date = getdate($time);\n\t$dayTotal = cal_days_in_month(0, $date['mon'], $date['year']);\n\t//Affiche l'en-tête du calendrier avec le nom du mois.\n\tprint '<table><tr><td colspan="7"><strong>' . $date['month'] . '</strong></td></tr>';\n\tfor ($i = 0; $i < 6; $i++) {\n\t\tprint '<tr>';\n\t\tfor ($j = 1; $j <= 7; $j++) {\n\t\t\t$dayNum = $j + $i*7 - $date['wday'];\n\t\t\t//Affiche une case avec le jour. Si la date correspond à la date du jour, la met en surbrillance.\n\t\t\tprint '<td';\n\t\t\tif ($dayNum > 0 && $dayNum <= $dayTotal) {\n\t\t\t\tprint ($dayNum == $now['mday']) ? ' style="background: #ccc;">' \: '>';\n\t\t\t\tprint $dayNum;\n\t\t\t}\n\t\t\telse {\n\t\t\t\t//Affiche une case vide si aucune date ne correspond à ce jour, mais la ligne n'est pas finalisée.\n\t\t\t\tprint '>';\n\t\t\t}\n\t\t\tprint '</td>';\n\t\t}\n\t\tprint '</tr>';\n\t\tif ($dayNum >= $dayTotal && $i != 6)\n\t\t\tbreak;\n\t}\n\tprint '</table>';\n?>::0:
+cmenu_insert: /PHP+HTML/Général/Calendrier:<?php\n\t$now = getdate(time());\n\t$time = mktime(0,0,0, $now['mon'], 1, $now['year']);\n\t$date = getdate($time);\n\t$dayTotal = cal_days_in_month(0, $date['mon'], $date['year']);\n\t//Affiche l'en-tête du calendrier avec le nom du mois.\n\tprint '<table><tr><td colspan="7"><strong>' . $date['month'] . '</strong></td></tr>';\n\tfor ($i = 0; $i < 6; $i++) {\n\t\tprint '<tr>';\n\t\tfor ($j = 1; $j <= 7; $j++) {\n\t\t\t$dayNum = $j + $i*7 - $date['wday'];\n\t\t\t//Affiche une case avec le jour. Si la date correspond à la date du jour, la met en surbrillance.\n\t\t\tprint '<td';\n\t\t\tif ($dayNum > 0 && $dayNum <= $dayTotal) {\n\t\t\t\tprint ($dayNum == $now['mday']) ? ' style="background\: #ccc;">' \: '>';\n\t\t\t\tprint $dayNum;\n\t\t\t}\n\t\t\telse {\n\t\t\t\t//Affiche une case vide si aucune date ne correspond à ce jour, mais la ligne n'est pas finalisée.\n\t\t\t\tprint '>';\n\t\t\t}\n\t\t\tprint '</td>';\n\t\t}\n\t\tprint '</tr>';\n\t\tif ($dayNum >= $dayTotal && $i != 6)\n\t\t\tbreak;\n\t}\n\tprint '</table>';\n?>::0:
 cmenu_insert: /PHP+HTML/Formulaire + Action:<?php if (isset($submitted)) {\n//form submit code here\n} else { ?>\n<form method="POST" action="<?php echo $SCRIPT_NAME ?>">\n\n<input type="submit" name="submitted" value="%0"></form>\n<?php } // end of form ?>::1:Texte du bouton d'envoi:
 cmenu_insert: /PHP+HTML/Formulaire:<form method="POST" action="<?php echo $SCRIPT_NAME ?>">\n\n:</form>:0:
 cmenu_insert: /PHP+HTML/Case à cocher:<input type="checkbox" name="%0" value="%1" <?php if (isset($%0)) { echo 'checked'; } ?>>::2:Nom:Valeur à cocher:
@@ -46,7 +46,7 @@ cmenu_insert: /HTML/Script:<script type="application/x-javascript">\n\t<!--\n\n\
 cmenu_insert: /HTML/Ancre nommée:<a name="%0">:</a>:1:Nom:
 cmenu_insert: /HTML/Meta/Balise Meta:<meta name="%0" value="%1" />::2:Nom:Contenu:
 cmenu_insert: /HTML/Meta/Rafraîchissement HTTP:<meta http-equiv="refresh" content="%0; URL=%1">::2:Délai de rafraîchissement (en secondes):URL de destination:
-cmenu_insert: /HTML/Lien relationnel:<link rel="%0" type="%1" href="%1" />::3:Relation:Type:href:
+cmenu_insert: /HTML/Lien relationnel:<link rel="%0" type="%1" href="%2" />::3:Relation:Type:href:
 cmenu_insert: /HTML/Image:<img src="%0" height="%1" width="%2" alt="%3" />::4:Source:Hauteur:Largeur:Texte alternatif:
 cmenu_insert: /HTML/Hyperlien:<a href="%0" title="%1">%2:</a>:3:Destination du lien:Titre:Texte du lien:
 cmenu_insert: /HTML/Formulaires/Sélection:<select name="%0">:</select>:1:Nom::
@@ -60,9 +60,9 @@ cmenu_insert: /HTML/Formulaires/Fichier:<input type="file" name="%0" />::1:Nom:
 cmenu_insert: /HTML/Formulaires/Case à cocher:<input type="checkbox" name="%0" value="%1" />::2:Nom:Valeur à cocher:
 cmenu_insert: /HTML/Formulaires/Formulaire:<form action="%0" method="%1">:</form>:2:Action:Méthode:
 cmenu_insert: /HTML/Feuille de styles externe:<link rel="stylesheet" type="text/css" href="%0" />::0:Feuille de style:
-cmenu_insert: /HTML/DOCTYPEs/XHTML Transitionnel:<!DOCTYPE XHTML PUBLIC "-//W3C//DTD HTML 1.0 Transitional//EN" "http\://www.w3.org/TR/xhtml1/xhtml1-loose.dtd">::0:
-cmenu_insert: /HTML/DOCTYPEs/XHTML Strict:<!DOCTYPE XHTML PUBLIC "-//W3C//DTD XHTML 1.0//EN" "http\://www.w3.org/TR/xhtml1/xhtml1-strict.dtd">::0:
-cmenu_insert: /HTML/DOCTYPEs/XHTML avec jeux de cadres:<!DOCTYPE XHTML PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN" "http\://www.w3.org/TR/xhtml1/xhtml1-frameset.dtd">::0:
+cmenu_insert: /HTML/DOCTYPEs/XHTML Transitionnel:<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 1.0 Transitional//EN" "http\://www.w3.org/TR/xhtml1/xhtml1-loose.dtd">::0:
+cmenu_insert: /HTML/DOCTYPEs/XHTML Strict:<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http\://www.w3.org/TR/xhtml1/xhtml1-strict.dtd">::0:
+cmenu_insert: /HTML/DOCTYPEs/XHTML avec jeux de cadres:<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN" "http\://www.w3.org/TR/xhtml1/xhtml1-frameset.dtd">::0:
 cmenu_insert: /HTML/DOCTYPEs/HTML Transitionnel:<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http\://www.w3.org/TR/html4/loose.dtd">::0:
 cmenu_insert: /HTML/DOCTYPEs/HTML Strict:<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http\://www.w3.org/TR/html4/strict.dtd">::0:
 cmenu_insert: /HTML/DOCTYPEs/HTML avec jeux de cadres:<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http\://www.w3.org/TR/html4/frameset.dtd">::0:
@@ -92,7 +92,7 @@ cmenu_insert: /DocBook/Listes/Liste variable:<variablelist><title>%0</title>\n\t
 cmenu_insert: /DocBook/Listes/Liste numérotée:<orderedlist>\n\t  <listitem><para>:</para></listitem>\n</orderedlist>:0:
 cmenu_insert: /DocBook/Listes/Élément de liste:<listitem><para>:</para></listitem>:0:
 cmenu_insert: /DocBook/Listes/Liste non numérotée:<itemizedlist>\n\t  <listitem><para>:</para></listitem>\n</itemizedlist>:0:
-cmenu_insert: /DocBook/Liens/Lien interne:<xref linkend="%0">\n::1:Identifiant du lien:
+cmenu_insert: /DocBook/Liens/Lien interne:<xref linkend="%0" />\n::1:Identifiant du lien:
 cmenu_insert: /DocBook/Liens/Lien externe:<ulink url="%0">%1</ulink>\n::2:URL du lien:Texte:
 cmenu_insert: /DocBook/Style/Option:<option>:</option>\n:0:
 cmenu_insert: /DocBook/Style/Emphase:<emphasis>:</emphasis>:0:
@@ -101,12 +101,12 @@ cmenu_insert: /DocBook/Style/Application:<application>\n:</application>:0:
 cmenu_insert: /DocBook/Style/Acronyme:<acronym>\n:</acronym>:0:
 cmenu_insert: /DocBook/En-têtes/Note juridique:<legalnotice>\n<para>:</para>\n</legalnotice>:0:
 cmenu_insert: /DocBook/En-têtes/Historique/Historique de révision:<revhistory>\n:\n</revhistory>:0:
-cmenu_insert: /DocBook/En-têtes/Historique/Révision:<revision>\n\t<revnumber>%0</revnumber>\n\t<date>%1</date>\n\t<authorinitials>%2</authorinitials>\n<revremark>%3</revremark>\n</revision>::4:Numéro de la révision:Date de la révision:Initiales de l'auteur:Remarque:
+cmenu_insert: /DocBook/En-têtes/Historique/Révision:<revision>\n\t<revnumber>%0</revnumber>\n\t<date>%1</date>\n\t<authorinitials>%2</authorinitials>\n\t<revremark>%3</revremark>\n</revision>::4:Numéro de la révision:Date de la révision:Initiales de l'auteur:Remarque:
 cmenu_insert: /DocBook/En-têtes/Entité/Entité système:<!ENTITY %0 SYSTEM "%0">::1:Nom de l'entité:
 cmenu_insert: /DocBook/En-têtes/Entité/Entité simple:<!ENTITY %0 "%0">::1:Nom de l'entité:
 cmenu_insert: /DocBook/En-têtes/Entité/Entité complexe:<!ENTITY %0 "%1">::2:Nom de l'entité:Définition de l'entité:
-cmenu_insert: /DocBook/En-têtes/DocTypes/Livre:<!Doctype BOOK PUBLIC "-//OASIS//DTD DocBook V%0//EN" [\n:]>:1:Version:
-cmenu_insert: /DocBook/En-têtes/DocTypes/Article:<!Doctype ARTICLE PUBLIC "-//OASIS//DTD DocBook V%0//EN" [\n:]>:1:Version:
+cmenu_insert: /DocBook/En-têtes/DocTypes/Livre:<!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook V%0//EN" [\n:]>:1:Version:
+cmenu_insert: /DocBook/En-têtes/DocTypes/Article:<!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook V%0//EN" [\n:]>:1:Version:
 cmenu_insert: /DocBook/En-têtes/Copyright:<copyright>\n\t<year>%0</year>\n\t<holder>%1</holder>\n</copyright>::2:Année:Détenteur:
 cmenu_insert: /DocBook/En-têtes/Auteurs/Groupe d'auteurs:<authorgroup>\n:\n</authorgroup>:0:
 cmenu_insert: /DocBook/En-têtes/Auteurs/Auteur:<author>\n\t<firstname>%0</firstname>\n\t<surname>%1</surname>\n</author>::2:Prénom:Nom:
