--- a/debian/rules
+++ b/debian/rules
@@ -1,61 +1,96 @@
-#! /usr/bin/make -f 
+#!/usr/bin/make -f
+# Sample debian/rules that uses debhelper.
+# GNU copyright 1997 to 1999 by Joey Hess.
 
-tmp:=$(shell pwd)/debian/tmp
+# Uncomment this to turn on verbose mode.
+# export DH_VERBOSE=1
+
+# This is the debhelper compatability version to use.
+# export DH_COMPAT=4
+
+PACKAGE=bluefish
+INSTALL=/usr/bin/install
+
+CFLAGS= -Wall -g
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-CFLAGS += -O0
+  CFLAGS += -O0
 else
-CFLAGS += -O2
-endif
-ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
-INSTALL_PROGRAM += -s
+  CFLAGS += -O2
 endif
 
-build: build-stamp
-build-stamp:
+ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
+  INSTALL_PROGRAM += -s
+endif
+
+config.status: configure
 	dh_testdir
+	# Add here commands to configure the package.
 	CFLAGS="$(CFLAGS)" ./configure \
-	            --prefix=/usr --sysconfdir=/etc --mandir=/usr/share/man \
-	            --with-freedesktop_org-menu=/usr/share/applications \
-	            --with-freedesktop_org-mime=/usr/share/mime \
-	            --without-gnome2_4-mime \
-	            --without-gnome2_4-appreg \
-	            --with-icon-path=/usr/share/pixmaps \
-	            --disable-update-databases
+		--prefix=/usr \
+		--mandir=\$${prefix}/share/man \
+		--with-icon-path=\$${prefix}/share/pixmaps \
+		--with-freedesktop_org-menu=\$${prefix}/share/applications \
+		--with-freedesktop_org-mime=\$${prefix}/share/mime \
+		--without-gnome2_4-mime \
+		--without-gnome2_4-appreg \
+		--disable-update-databases
+
+build: build-stamp
+
+build-stamp: config.status
+	dh_testdir
+	# Add here commands to compile the package.
 	$(MAKE)
+
 	touch build-stamp
 
 clean:
 	dh_testdir
 	dh_testroot
+	-rm -f build-stamp configure-stamp
+	
+	# Add here commands to clean up after the build process.
+	-$(MAKE) distclean
+	-rm -f config.*
+	
 	-test -r /usr/share/misc/config.sub && \
-	  cp -f /usr/share/misc/config.sub $(CURDIR)/config.sub
+		cp -f /usr/share/misc/config.sub config.sub
 	-test -r /usr/share/misc/config.guess && \
-	  cp -f /usr/share/misc/config.guess $(CURDIR)/config.guess
-	[ ! -f Makefile ] || $(MAKE) distclean
-	rm -f build-stamp
-	rm -f po/*.gmo po/stamp-cat-id po/bluefish.pot po/cat-id-tbl.c data/Makefile
-	rm -rf $(tmp)
+		cp -f /usr/share/misc/config.guess config.guess
+	-test -r /usr/share/gettext/config.rpath && \
+		cp -f /usr/share/gettext/config.rpath config.rpath
+	
+	aclocal-1.7
+	autoconf
 	dh_clean
 
-binary-indep:
-
-binary-arch: build 
+install: build
 	dh_testdir
 	dh_testroot
-	$(MAKE) install prefix=$(tmp)/usr sysconfdir=$(tmp)/etc mandir=$(tmp)/usr/share/man pixmapsdir=$(tmp)/usr/share/pixmaps
-	install -d -o root -g root -m 755 $(tmp)/usr/share/pixmaps
-	install -o root -g root -m 644 debian/bluefish_icon1.xpm $(tmp)/usr/share/pixmaps/bluefish_icon.xpm
-	install -o root -g root -m 644 inline_images/bluefish_icon1.png $(tmp)/usr/share/pixmaps/bluefish-icon.png
-	install -d -o root -g root -m 755 $(tmp)/usr/share/applications
-	install -o root -g root -m 644 data/bluefish.desktop $(tmp)/usr/share/applications/
+	dh_clean -k
+	dh_installdirs
+
+	# Add here commands to install the package into debian/bluefish.
+	$(MAKE) install DESTDIR=$(CURDIR)/debian/$(PACKAGE)
+
+
+# Build architecture-independent files here.
+binary-indep: build install
+# We have nothing to do by default.
+
+# Build architecture-dependent files here.
+binary-arch: build install
+	dh_testdir
+	dh_testroot
+	dh_install
 	dh_installdocs
 	dh_installman
 	dh_installmenu
 	dh_installchangelogs
-ifeq "$(findstring nostrip,$(DEB_BUILD_OPTIONS))" ""	
+	# dh_installchangelogs ChangeLog # if source contains ChangeLog
+	dh_link
 	dh_strip
-endif
 	dh_compress
 	dh_fixperms
 	dh_installdeb
@@ -65,4 +100,4 @@ endif
 	dh_builddeb
 
 binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary
+.PHONY: build clean binary-indep binary-arch binary install
